# grpc-build

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
autogen/lang/rust/: mod.rs
grpc-build/: Cargo.toml
grpc-build-core/: Cargo.toml
grpc-build-core/src/: lib.rs
grpc-build-derive/: Cargo.toml
grpc-build-derive/src/: lib.rs
grpc-build/src/: base.rs  builder.rs  lib.rs  main.rs  tree.rs
grpc-build/tests/: main.rs
grpc-build/tests/compile_test/: definitions_exist.rs
grpc-build/tests/protos/grpc_build/no_package/: no_package.proto
src/: base.rs  graph_layout.rs  ident.rs  lib.rs  main.rs  tonic_builder.rs  tree.rs
tests/: main.rs
tests/compile_test/: definitions_exist.rs
tests/protos/grpc_build/client/: helloworld.proto
tests/protos/grpc_build/request/: helloworld.proto
tests/protos/grpc_build/response/: helloworld.proto
