[package]
name = "grpc-build"
version = "0.3.0"
authors = ["Stefan Adrian Danaita <me@dsa.io>"]
license = "MIT"
edition = "2018"

readme = "README.md"
description = "gPRC compilation made easy"
homepage = "https://github.com/stefandanaita/grpc-build"
repository = "https://github.com/stefandanaita/grpc-build"

keywords = ["grpc", "tonic", "proto"]
categories = ["development-tools"]

[[bin]]
path = "src/main.rs"
name = "grpc_build"

[lib]
path = "src/lib.rs"
name = "grpc_build"

[dependencies]
prost = "0.8"
petgraph = "0.6"
anyhow = "1"
tonic-build = "0.5"
structopt = { version ="0.3", features = ["paw"] }
paw = "1"
thiserror = "1"
