[package]
name = "grpc-build"
version = "1.0.0"
authors = ["Stefan Adrian Danaita <me@dsa.io>"]
license = "MIT"
edition = "2021"

readme = "README.md"
description = "gPRC compilation made easy"
homepage = "https://github.com/stefandanaita/grpc-build"
repository = "https://github.com/stefandanaita/grpc-build"

keywords = ["grpc", "tonic", "proto"]
categories = ["development-tools"]

[[bin]]
path = "src/main.rs"
name = "grpc_build"

[lib]
path = "src/lib.rs"
name = "grpc_build"

[dependencies]
prost = "0.9"
anyhow = "1"
tonic-build = "0.6"
structopt = { version ="0.3", features = ["paw"] }
paw = "1"
walkdir = "2.3"

[dev-dependencies]
tonic = "0.6"
trybuild = "1.0"
