[package]
name = "grpc-build-core"
version = "0.1.0"
authors = ["Stefan Adrian Danaita <me@dsa.io>"]
license = "MIT"
edition = "2021"

readme = "../README.md"
description = "gPRC compilation made easy"
homepage = "https://github.com/stefandanaita/grpc-build"
repository = "https://github.com/stefandanaita/grpc-build"

keywords = ["grpc", "tonic", "proto"]
categories = ["development-tools"]

[dependencies]
grpc-build-derive = { version = "0.1.0", path = "../grpc-build-derive" }
prost-types = "0.10"
bytes = "1"
