[package]
name = "grpc-build-derive"
version = "0.1.0"
authors = ["Stefan Adrian Danaita <me@dsa.io>"]
edition = "2021"
license = "MIT"

readme = "../README.md"
description = "gPRC compilation made easy"
homepage = "https://github.com/stefandanaita/grpc-build"
repository = "https://github.com/stefandanaita/grpc-build"

keywords = ["grpc", "tonic", "proto"]
categories = ["development-tools"]

[lib]
proc-macro = true

[dependencies]
syn = "1"
quote = "1"
