[package]
name = "grpc-build"
version = "6.0.0"
authors = ["Stefan Adrian Danaita <me@dsa.io>"]
license = "MIT"
edition = "2021"

readme = "../README.md"
description = "gPRC compilation made easy"
homepage = "https://github.com/stefandanaita/grpc-build"
repository = "https://github.com/stefandanaita/grpc-build"

keywords = ["grpc", "tonic", "proto"]
categories = ["development-tools"]

[[bin]]
path = "src/main.rs"
name = "grpc_build"

[lib]
path = "src/lib.rs"
name = "grpc_build"

[dependencies]
prost = "0.12"
anyhow = "1"
tonic-build = "0.11"
prost-build = "0.12"
clap = { version = "4.0.32", features = ["derive"] }
paw = "1"
walkdir = "2.3"
tempfile = "3.3"
prost-types = "0.12"
fs-err = "2.7"

[dev-dependencies]
tonic = "0.11"
trybuild = "1.0"
grpc-build-core = { path = "../grpc-build-core"}
